@@ -1,6 +1,10 @@
 Changelog
 =========
 
+* Do not remove jquery ui 'global_include' on install
+  not to break third part products using it.
+  [thomasdesvenain]
+
 1.7 - 2011-03-21
 ----------------
 
@@ -11,11 +15,11 @@ Changelog
 * Updated French translation.
   Redo and Undo translations were inversed.
   [vincentfretin]
-  
+
 * move back to collective.js.jqueryui since it now allows you
   to only show javascript on certain views.
   [vangheem]
-  
+
 * plone 4.1 compatible
 
 
